---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2021.11.7
  Info:
    - New graphics by snouz (equipment, icon, tech mod icon).
    - Some code cleanup.
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2021.11.2
  Info:
    - Added support for AAI Programmable Vehicles (Thanks Kocou).
    - Fixed in game changelog.
---------------------------------------------------------------------------------------------------
Version: 1.0.9
Date: 2021.04.14
  Info:
    - Fixed compatibility with Krastorio2.
    - Fixed in game changelog.
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2021.03.07
  Info:
    - Fixed compatibility with BigMonsters's Spidertrons enemies causing crash.
    - Added option to enable or disable Spidertron's fuel requirement.
    - Reduced icon sizes.
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2021.02.25
  Info:
    - HotFix.
    - Removed "debug symbols"
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2021.02.25
  Info:
    - Added a way for you to use the mod in early-game, require SchallPrimaryBattery.
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2021.02.21
  Info:
    - It will no longer work in Spidertrons since causes a lot of bugs in other mods...
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2021.02.9
  Info:
    - Added support for the mod Hovercrafts ( not tested since I'm a bit without time ).
    - Increased fuel value to 15MJ.
---------------------------------------------------------------------------------------------------