@@ -1,8 +1,10 @@
 [item-name]
 zelectric-transformer=Electrical Transformer
+zelectric-transformer-power=Electric Energy
 
 [item-description]
 zelectric-transformer=Uses energy stored in batteries to power vehicles.
+zelectric-transformer-power=You aren't supposed to grab this using your bare hands...
 
 [equipment-name]
 zelectric-transformer=Electrical Transformer
@@ -21,8 +23,10 @@ zelectric-transformer=Unlocks the abiliity to use energy stored in batteries to 
 ZElectricVehicles-Acceleration=Vehicle acceleration
 ZElectricVehicles-TopSpeed=Vehicle top speed multiplier
 ZElectricVehicles-SpiderFuel=Make Spidertron consume burnable fuel
+ZElectricVehicles-EarlyMode=Make Transformer technology available early game
 
 [mod-setting-description]
 ZElectricVehicles-Acceleration=Default: 1 (100%)
 ZElectricVehicles-TopSpeed=Default: 1 (100%)
 ZElectricVehicles-SpiderFuel=DO NOT CHANGE MIDGAME! IT'LL CORRUPT YOUR SAVE!
+ZElectricVehicles-EarlyMode=Reduced price and requirements for Electrical Transformer.
