@@ -21,8 +21,10 @@ zelectric-transformer=Débloque le Transformateur Électrique, permettant d'util
 ZElectricVehicles-Acceleration=Accélération de véhicule
 ZElectricVehicles-TopSpeed=Vitesse de pointe
 ZElectricVehicles-SpiderFuel=Les Spidertrons consomment de l'énergie fossile
+ZElectricVehicles-EarlyMode=Recherche du Transformateur électrique disponible plus tôt
 
 [mod-setting-description]
 ZElectricVehicles-Acceleration=Defaut: 1 (100%)
 ZElectricVehicles-TopSpeed=Defaut: 1 (100%)
 ZElectricVehicles-SpiderFuel=NE PAS CHANGER DANS UNE PARTIE EXISTANTE, SOUS PEINE DE CORROMPRE LA SAUVEGARDE!
+ZElectricVehicles-EarlyMode=Prérequis réduits pour le Transformateur électrique
